...
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/cross_button"
        android:layout_width="133dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_twotone_circle_cross"
        app:layout_constraintEnd_toStartOf="@id/check_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_card" />

    <ImageView
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewCelebrate"
        app:layout_constraintStart_toStartOf="@+id/viewCelebrate"
        app:layout_constraintTop_toBottomOf="@+id/cross_button" />

    <Button
        android:id="@+id/friends_logout"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:text="Log out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_friends_button" />
...
